@@ -12,6 +12,8 @@ UNRELEASED:
 * signer clear <zone> would assert when signconf wasn't read yet.
 * The <Interval> tag had been deprecated, and is now no longer allowed to
   be specified.
+* OPENDNSSEC-864: ods-signer didn't print help. Also --version and --socket
+  options where not processed.
 * OPENDNSSEC-869: ds-seen command did not give error on badly formatted keytag.
 * OPENDNSSEC-681: After fork() allow child process to pass error messages to
   parent so they can be printed to the console in case of failed start.
